IE overflow bug

--- a/select.css
+++ b/select.css
@@ -1,116 +1,90 @@
 .select-content {
-    border: solid #000 1px;
-    border-radius: 4px 4px 2px 2px;
-    outline: none;
-    padding: 4px;
+    border: solid #6d6d6d 1px;
     background-color: #fff;
     position: relative;
     z-index: 2;
-    min-height: 30px;
+    height: 48px;
+    font-family: arial;
+    overflow: hidden;
 }
 
 .select-options {
-    background-color: #fff;
-    border-top: none;
-    overflow-y: hidden;
+    overflow: hidden;
     position: absolute;
     z-index: 1;
-    left: 0;
-    width: 100%;
+    height: 0;
+    width: 478px;
     margin-top: -1px;
-    border-bottom: solid #aaa 1px;
-    border-radius: 0 0 4px 4px;
+    border: solid #6d6d6d 1px;
+    border-top: none;
 }
 
-.select-options > li {
+.select-options-padding {
+    padding: 5px;
+    width: 468px;
+}
+
+.select-options-padding > span {
     padding: 6px;
-    list-style: none;
-    display: block;
-    overflow: auto;
+    display: inline-block;
     cursor: pointer;
     font-size: 14px;
-    border-left: solid #aaa 1px;
-    border-right: solid #aaa 1px;
-    border-top: none;
     font-family: arial;
-}
-
-.selected-options > li > p {
-    display: inline-block;
-    font-size: 14px;
     line-height: 14px;
-    float: left;
 }
 
-.select-options > li:hover {
-    background-color: #5897fb;
-    color: #fff;
-}
-
-.select-options > li.selected {
-    background-color: #ddd;
-    color: #000;
-    cursor: auto;
+.select-options-padding > span.select-option {
+    color: #24a4ef;
 }
 
 .selected-options {
-    display: inline-block;
+    width: 968px;
+    height: 38px;
+    display: block;
+    /*overflow: hidden;*/
+    margin: 5px;
+    float: left;
+    vertical-align: top;
 }
 
 .selected-options > li {
     list-style: none;
     display: inline-block;
     float: left;
-    overflow: auto;
     font-size: 14px;
-    padding: 5px;
-    margin: 2px;
-    background-color: #e4e4e4;
-    border: 1px solid #aaa;
-    border-radius: 4px;
-    height: 14px;
-    font-family: arial;
+    height: 24px;
+    border: solid #bcdbef 1px;
+    margin: 6px 2px;
+    background-color: #cfecfa;
+    padding: 0 2px;
 }
 
 .selected-options > li.search-input-wrap {
-    background-color: #fff;
+    margin: 0;
+    height: 38px;
     border: none;
-    border-radius: 0;
-    height: 22px;
     padding: 0;
-    font-family: arial;
-    overflow: hidden;
+}
+
+.selected-options > li > p {
+    display: inline-block;
+    line-height: 24px;
+    color: #53a4d3;
+}
+
+.selected-options > li > p.select-cancel {
+    font-size: 12px;
+    color: #53a4d3;
+    cursor: default;
 }
 
 .search-input {
-    font-size: 14px;
-    font-family: arial;
-    outline: none;
+    width: 468px;
+    height: 38px;
+    display: block;
+    padding: 0px 4px;
     border: none;
-    padding: 5px 0;
-}
-
-.select-cancel {
-    cursor: pointer;
+    outline: none;
     font-size: 14px;
-    vertical-align: middle;
-}
-
-.select-placeholder {
-    position: absolute;
-    z-index: 3;
-    border: solid #000 1px;
-    top: 0px;
-    height: 30px;
-    font-size: 14px;
-    line-height: 30px;
-    border-radius: 4px 4px 2px 2px;
-    padding: 4px 0px 4px 8px;
-    background-color: #fff;
-    color: #aaa;
-    font-family: arial;
-}
-
-.select-placeholder.hide {
-    display: none;
+    /*background-color: pink;*/
 }
